# Qt_HomeAutomation

./: .gitignore  CMakeLists.txt  HAS_main_GUI.cpp  HAS_main_GUI.h  HAS_main_GUI.ui  actuator.cpp  actuator.h  camera.cpp  camera.h  do_some_thing.cpp  do_some_thing.h  frameprocessor.cpp  frameprocessor.h  has_main_backend.cpp  has_main_backend.h  heater_controller.cpp  heater_controller.h  imagewidget.h  main.cpp  memory_interface.cpp  memory_interface.h  playback.cpp  playback.h  sensor.cpp  sensor.h  sharedArgumant.cpp  sharedArgumant.h  temp_sensor.cpp  temp_sensor.h
Media/: CommitFile
Media/camera00_record/: 2024-10-08_08-50-19.avi  2024-10-08_08-50-45.avi  2024-10-08_08-50-50.avi  2024-10-08_08-51-01.avi  2024-10-08_08-51-03.avi  2024-10-14_10-16-45.avi  2024-10-14_10-16-46.avi  2024-10-14_10-16-47.avi  2024-10-14_10-32-37.avi  2024-10-14_22-09-14.avi
Media/camera02_record/: 2024-10-07_22-04-47.avi  2024-10-14_22-08-50.avi
